feat: adding new logo and education in navbar

--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/gif" href="%PUBLIC_URL%/favicon.gif">
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.gif">
-    <title>Sreecharan Manne — Software Engineer</title>
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/my-logo.png">
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/my-logo.png">
+    <title>Charan's Portfolio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <meta name="description" content="Sreecharan Manne - Software Engineer at Amazon Ads. Passionate about ML, Web Development, and Problem Solving.">
+    <meta name="description" content="Sreecharan Manne - Software Engineer at Amazon. Passionate about AI, ML, Web Development, and Problem Solving.">
 </head>
 <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
